# microservices-demo-rust

./: README-ja.md  README.md  microservices-demo-rust.code-workspace  skaffold.yaml  test.html  test2.html  test3.html  workspace.code-workspace
.deploystack/: test
.github/release-cluster/: README.md
.github/workflows/: ci-main.yaml  ci-pr.yaml
docs/rust/en/: index.md
docs/rust/en/1.development/: 1-0.development.md
docs/rust/en/2.frontend/: 2-0.frontend.md  2-1.axum.md  2-2.handler.md  2-3.page.md  2-4.model.md  2-5.rpc.md  2-6.component.md
docs/rust/en/3.backend/: 3-0.backend.md  3-1.productcatalog.md  3-2.cart.md  3-3.ad.md
docs/rust/jp/: index.md
docs/rust/jp/1.development/: 1-0.development.md
docs/rust/jp/2.frontend/: 2-0.frontend.md  2-1.axum.md  2-2.handler.md  2-3.page.md  2-4.model.md  2-5.rpc.md  2-6.component.md
docs/rust/jp/3.backend/: 3-0.backend.md  3-1.productcatalog.md  3-2.cart.md  3-3.ad.md
docs/rust/jp/backend/: 0.backend.md  1.productcatalog.md  2.cart.md  3.ad.md
docs/rust/jp/frontend/: 0.frontend.md  1.axum.md  2.handler.md  3.page.md  4.model.md  5.rpc.md  6.component.md  6.page-props.md  7.component.md  components.md  page-props.md
helm-chart/: values.yaml
helm-chart/templates/: frontend.yaml  opentelemetry-collector.yaml
kubernetes-manifests/: frontend.yaml  kustomization.yaml
kustomize/: README.md
kustomize/base/: kustomization.yaml
kustomize/components/container-images-registry/: kustomization.yaml
kustomize/components/container-images-tag/: kustomization.yaml
kustomize/components/container-images-tag-suffix/: kustomization.yaml
kustomize/components/network-policies/: README.md  kustomization.yaml
kustomize/components/service-accounts/: README.md  kustomization.yaml
kustomize/components/service-mesh-istio/: README.md
release/: kubernetes-manifests.yaml
src/adservice/: Cargo.toml  Dockerfile  build.rs
src/adservice/src/: main.rs  service.rs
src/cartservice/: Cargo.toml  Dockerfile  build.rs
src/cartservice/src/: main.rs  service.rs
src/cartservice/src/services/: HealthCheckService.cs
src/frontend/: Cargo.toml  Dockerfile  build.rs
src/frontend/src/: handlers.rs  main.rs  page_builder.rs
src/frontend/src/components/: body.rs  body_footer.rs  body_header.rs  body_main.rs  cart_body.rs  currency_form.rs  head.rs  home.rs  home_body.rs  mod.rs  product_body.rs  recommendations.rs  script.rs
src/frontend/src/components/body/: ad.rs  ad_component.rs  cart.rs  cart_item.rs  currency.rs  footer.rs  header.rs  home.rs  hot_product.rs  mod.rs  order.rs  product.rs  recommendation.rs  recommendations.rs
src/frontend/src/components/body/parts/: ad.rs  cart_item.rs  checkout.rs  currency.rs  footer.rs  header.rs  hot_product.rs  mod.rs  recommendation.rs
src/frontend/src/handlers/: cart.rs  currency.rs  home.rs  mod.rs  product.rs
src/frontend/src/model/: ad.rs  cart.rs  currency.rs  hot_product.rs  mod.rs  order.rs  product.rs  recommendation.rs
src/frontend/src/pages/: cart_page.rs  home_page.rs  mod.rs  order_page.rs  page.rs  page_builder.rs  page_writer.rs  product_page.rs
src/frontend/src/rpc/: ad.rs  cart.rs  checkout.rs  currency.rs  mod.rs  product.rs  products.rs  recommendation.rs  shipping.rs
src/productcatalogservice/: Cargo.toml  Dockerfile  README.Docker.md  build.rs  compose.yaml
src/productcatalogservice/src/: client.rs  main.rs  server.rs  service.rs
src/productcatalogserviceNew/: Cargo.toml
