[package]
name = "adservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
tonic-health = "0.11.0"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8.5"
once_cell = "1.19.0"
anyhow = { version = "1.0", default-features = false }

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
