[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tower-cookies = "0.10.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
anyhow = { version = "1.0", default-features = false }
chrono = "0.4.35"
rand = "0.8.5"
once_cell = "1.19.0"

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
