[package]
name = "productcatalogservice"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the ProductCatalog gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the ProductCatalog gRPC client
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.11"
tonic-health = "0.11.0"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
